app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-server
  template:
    metadata:
      labels:
        app: main-server
    spec:
      containers:
      - name: main-server
        image: localhost:32000/main-server
        ports:
        - containerPort: 5000
