app/k8s/clusterIp.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-server-clusterip-service # Changed the service name to reflect the type
  namespace: tests
  labels:
    app: main-server
spec:
  selector:
    app: main-server
  ports:
    - name: app-port
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
  clusterIP: 10.152.183.100 # You can keep the static ClusterIP if desired
