app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-server-service
spec:
  selector:
    app: main-server
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
